--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -465,10 +465,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e967f574",
    "metadata": {},
-   "source": []
+   "source": [
+    "Όπως γνωρίζουμε ,ένα heatmap δείχνει τον συντελεστή συσχέτισης για κάθε ζεύγος αριθμητικών χαρακτηριστικών χρησιμοποιώντας μια χρωματική κλίμακα, όπου το κόκκινο υποδηλώνει θετική συσχέτιση και το μπλε υποδηλώνει αρνητική συσχέτιση. Όσο πιο σκούρο είναι το χρώμα, τόσο ισχυρότερος είναι ο συσχετισμός. Έτσι λοιπόν , φαίνεται ότι τα παιδιά και το μέγεθος της οικογένειας έχουν ισχυρή θετική συσχέτιση μεταξύ τους και έτσι τείνουν να αυξάνονται και να μειώνονται μαζί. Αντίθετα, το kidhome με το εισόδημα φαίνεται πως έχουν μια ισχυρή αρνητική συσχέτιση , γεγονός που υποδηλώνει ότι κινούνται προς αντίθετες κατευθύνσεις. "
+   ]
   },
   {
    "cell_type": "code",
@@ -1076,7 +1079,7 @@
    "id": "039c641d",
    "metadata": {},
    "source": [
-    "Αρχικά με τη μέθοδο Elbow και κατ'επέκταση το διάγραμμα , βλέπουμε πως ο αριθμός των συστάδων που πρέπει να χρησιμοποιηθεί στους αλγορίθμους του clustering είναι τα 4 clusters. \n",
+    "Αρχικά με τη μέθοδο Elbow και κατ'επέκταση από το διάγραμμα , βλέπουμε πως ο αριθμός των συστάδων που πρέπει να χρησιμοποιηθεί στους αλγορίθμους του clustering είναι τα 4 clusters. \n",
     "Η δεύτερη και η τρίτη γραφική παράσταση δείχνουν την τρισδιάστατη προβολή των δεδομένων, όπου τα σημεία είναι χρωματικά κωδικοποιημένα με βάση το σύμπλεγμα στο οποίο ανήκουν."
    ]
   }
